--- a/PoundCatcher/Views/Shared/_LoginPartial.cshtml
+++ b/PoundCatcher/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using PoundCatcher.Models
+@using PoundCatcher.Data.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
